--- a/style.css
+++ b/style.css
@@ -54,6 +54,12 @@ body{
 	font-family: verdana;
 	color:white;
 	transition: 0.5s;
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
 	box-shadow: 0 10px 20px 5px rgba(0,0,0,.20);
 }
 #display:hover{
@@ -61,7 +67,19 @@ body{
 	cursor:pointer;
 	box-shadow: 0 10px 25px 10px rgba(0,0,0,.12);
 }
+#more{
+	margin:0 auto;
+	text-align:center;
 
+
+}
+#img{
+	width:5%;
+}
+#more2{
+	height:300px;
+	margin:0 auto;
+}
 .btn{
 	width:150px;
 	height:30px;
@@ -82,7 +100,7 @@ body{
 	border-bottom:1px solid #29c2f5;
 }
 .saved{
-	width:130px;
+	width:100%;
 	height:100px;
 	border-radius: 5px;
 	position: relative;
@@ -91,31 +109,124 @@ body{
 	justify-content: center;
 	align-items: center;
 	color:white;
-	left:20px;
+	margin:0 auto;
+
 	margin-top: 20px;
-	box-shadow:0 0 20px 10px rgba(0,0,0,.15);
+	box-shadow:0 5px 40px 5px rgba(0,0,0,.12);
 
 }
+
+
 
 input[type="color"] {
 	-webkit-appearance: none;
 	border: none;
-	width: 70px;
+	outline:none;
+	width: 40px;
 
 	height: 40px;
 }
 input[type="color"]::-webkit-color-swatch-wrapper {
 	padding: 0;
+	outline:none;
 }
 input[type="color"]::-webkit-color-swatch {
 	border: none;
-	border-radius: 5px;
+	border-radius: 50%;
 	box-shadow:0 5px 20px 2px rgba(0,0,0,.20);
 	cursor:pointer;
+	outline:none;
 	transition: 0.2s;
 }
 input[type="color"]::-webkit-color-swatch:hover{
 	border:0.7px solid black;
 	transition: 0.5s;
 	box-shadow:0 2px 30px 3px rgba(0,0,0,.20);
+	outline:none;
+}
+
+.edit{
+	float: right;
+	margin-right: 40px;
+	margin-top: 20px;
+}
+#title{
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+}
+
+#par{
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+}
+.button{
+	margin-right:15px;
+	margin-top:15px;
+}
+
+
+
+.box{
+	transition:0.5s;
+}
+.container{
+	transition:0.5s;
+
+}
+.box{
+	width:100%;
+	margin:0 auto;
+	transition:0.5s;
+
+}
+.box .content{
+	transition:0.5s;
+}
+
+
+#a{
+	transition:0.5s;
+	background:#dedede;
+}
+#a:hover{
+ transition:0.5s;
+ background:white;
+}
+.footer{
+	width:100%;
+	height:30px;
+	background:black;
+	position:relative;
+	top:100px;
+	padding-bottom:5px;
+
+}
+
+
+::-webkit-scrollbar {
+  width: 10px;
+
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background:#7d7d7d;
+  border-radius:20px;
+
+
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background:#292929;
+	border-radius:20px;
+
 }
